Initiate circuit breaker dashboard

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -32,6 +32,7 @@
 					<ul class="nav pull-right">
 						<li class="navbar-link" ng-class="{active: $state.includes('apps') ||  $state.includes('overview')  }"><a ui-sref="overview">Applications</a></li>
 						<li class="navbar-link" ng-class="{active: $state.includes('history')}"><a ui-sref="history">History</a></li>
+						<li class="navbar-link" ng-class="{active: $state.includes('circuit-breaker')}"><a ui-sref="circuit-breaker">Circuit Breakers</a></li>
 						<li class="navbar-link" ng-class="{active: $state.includes('about')}"><a ui-sref="about">About</a></li>
 					</ul>
 				</div>
