Move from WebJar to Wro4j

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -7,10 +7,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
-<link href="https://fonts.googleapis.com/css?family=Varela+Round|Montserrat:400,700" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="webjars/bootstrap/${bootstrap.version}/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="webjars/nvd3/${nvd3.version}/nv.d3.min.css" />
-<link rel="stylesheet" type="text/css" href="styles/main.css" />
+<link rel="stylesheet" type="text/css" href="css/dashboard.css" />
 </head>
 <body ng-app="springCloudDashboard">
 	<script type="text/javascript">
@@ -58,22 +55,6 @@
 			</div>
 		</footer>
 	</div>
-	<script src="webjars/jquery/${jquery.version}/jquery.min.js"></script>
-	<script src="webjars/angularjs/${angularjs.version}/angular.min.js"></script>
-	<script src="webjars/bootstrap/${bootstrap.version}/js/bootstrap.min.js"></script>
-	<script src="webjars/angularjs/${angularjs.version}/angular-resource.min.js"></script>
-	<script src="webjars/angularjs/${angularjs.version}/angular-route.min.js"></script>
-	<script src="webjars/angular-ui-router/${angular-ui-router.version}/angular-ui-router.min.js"></script>
-	<script src="webjars/angular-ui-bootstrap/${angular-ui-bootstrap.version}/ui-bootstrap.min.js"></script>
-	<script src="webjars/angular-ui-bootstrap/${angular-ui-bootstrap.version}/ui-bootstrap-tpls.min.js"></script>	
-	<script src="webjars/d3js/${d3js.version}/d3.min.js"></script>
-	<script src="webjars/nvd3/${nvd3.version}/nv.d3.min.js"></script>
-	<script src="webjars/angularjs-nvd3-directives/0.0.7/angularjs-nvd3-directives.js"></script>
-	<script src="webjars/jolokia.js/${jolokia-js.version}/jolokia.js"></script>
-	<script src="scripts/app.js"></script>
-	<script src="scripts/controllers/controllers.js"></script>
-	<script src="scripts/controllers/circuit-breaker.js"></script>
-	<script src="scripts/services/services.js"></script>
-	<script src="scripts/filters/filters.js"></script>
+	<script src="js/dashboard.js"></script>
 </body>
 </html>
