--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 <link rel="stylesheet" type="text/css" href="css/dashboard.css" />
+<link rel="stylesheet" type="text/css" href="/custom-style.css" />
 </head>
 <body ng-app="springCloudDashboard">
 	<script type="text/javascript">
